style.css
@font-face {
  font-family: "LFT Etica";
  src: url("./assets/LFTEtica/LFTEtica.eot");
  src: url("./assets/LFTEtica/LFTEtica.eot?#iefix") format("embedded-opentype"),
    url("./assets/LFTEtica/LFTEtica.woff2") format("woff2"), url("./assets/LFTEtica/LFTEtica.woff") format("woff"),
    url("./assets/LFTEtica/LFTEtica.ttf") format("truetype");
}

/* RESET & GENERAL*/
:root {
  --sGrey: #3c4858;
  --sLightGrey: #717e8f;
  --sLightestGrey: #aeb9c6;
  --sWhiteSmoke: #f7f8fb;
  --sRed: #f9423a;
  --sBlue: #2650ff;
  --sYellow: #f2a700;
  --sPurple: #9924ff;
  --sGreen: #07bb9c;
  --sTransparentOverlay: rgba(255, 255, 255, 0.3);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "LFT Etica", sans-serif;
}

ul {
  list-style: none;
}

li {
  display: inline-block;
}

a {
  color: inherit;
  text-decoration: none;
}

input {
  border: none;
  outline: none;
}

section {
  margin-top: 36px;
}

h2 {
  font-size: 21px;
  color: var(--sGrey);
}

h4 {
  font-size: 12px;
  letter-spacing: 1.2px;
}

h5 {
  font-size: 16px;
  text-transform: uppercase;
}

p {
  color: inherit;
  margin-top: 0.5em;
}

/* CONTAINER */
.container {
  margin: 0 auto;
  padding: 0 1em;
  width: 100%;
  max-width: 980px;
}

/* NAVBAR */
.nav {
  display: flex;
  justify-content: flex-end;
  color: gray;
  font-size: 14px;
}

.nav__item {
  padding: 8px 0;
}

.nav__item:not(:first-child)::before {
  content: "|";
  color: lightgray;
  padding: 0 8px;
}

.nav__item:hover {
  text-decoration: underline;
}

/* HEADER SECTION*/
.header {
  display: flex;
  justify-content: space-between;
  padding: 24px 0;
}

.header__logo {
  height: 36px;
}

.header__item {
  color: var(--sGrey);
  margin: 0 16px;
}

.header__item:hover {
  text-decoration: underline;
}

.header--text-grey {
  color: var(--sGrey);
  fill: var(--sGrey);
}

.header--text-lightest-grey {
  color: var(--sLightestGrey);
  fill: var(--sLightestGrey);
}

/* Button */
.btn {
  padding: 8px 16px;
  border: 1px solid transparent;
  border-radius: 4px;
  text-align: center;
}

.btn:hover {
  border: 1px solid currentColor;
}

.btn__img {
  vertical-align: middle;
  margin-right: 4px;
}

.btn__text {
  font-size: 16px;
  vertical-align: middle;
}

.btn--red {
  background-color: #feeceb;
  color: red;
  fill: red;
}

/* SEARCH SECTION */

.search__form {
  display: flex;
  padding: 1.5em;
  margin: 0 8px;
  color: var(--sGrey);
  box-shadow: 0 10px 24px 0 rgba(0, 0, 0, 0.1);
}

.search__form p {
  font-size: 14px;
}

.search__block {
  flex-grow: 1;
  margin: 0 0.3em;
}

.search__caption {
  margin-bottom: 0.5em;
}

.search__form > div:last-child {
  display: flex;
  align-items: flex-end;
}

/* Input */
.input {
  padding: 0.7em;
  border-radius: 5px;
  border: 1px solid lightgray;
  display: flex;
}

.input:hover {
  border-color: grey;
}

.input--red-btn {
  z-index: -1;
  position: relative;
  background-color: var(--sRed);
  border: none;
  padding-left: 1.25em;
  padding-right: 1.25em;
  border: 1px solid transparent;
}

.input--red-btn::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* piccolo bug sul border */
  border-radius: 4.2px;
}

.input--red-btn:hover::before {
  background-color: var(--sTransparentOverlay);
}

.input--red-btn:hover {
  border-color: var(--sTransparentOverlay);
}

.input__icon {
  fill: var(--sLightestGrey);
}

.input__text {
  font-size: 16px;
  color: var(--sGrey);
  background-color: transparent;
  border: none;
  margin-left: 10px;
  width: 100%;
}

.input__text::placeholder {
  font-size: 16px;
  color: gray;
}

/* EXPLORE SECTION */
.explore__title {
  margin-bottom: 24px;
  text-align: center;
  color: var(--sLightGrey);
}

.row {
  display: flex;
  justify-content: space-around;
}

.card {
  border-radius: 10px;
  margin: 0 0.5em;
  flex-basis: 25%;
  padding: 1.5em;
  padding-top: 2.5em;
  padding-bottom: 1.5em;
  z-index: -1;
}

.card__img {
  display: block;
  margin: 0 auto;
}

.card__btn {
  position: relative;
  margin-top: 32px;
  width: 100%;
  height: 32px;
  background-color: transparent;
  border: 1px solid lightgray;
  border-radius: 5px;
  color: white;
  cursor: pointer;
}

.card__btn:hover::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: var(--sTransparentOverlay);
}

.card--blue {
  background: var(--sBlue);
}

.card--yellow {
  background: var(--sYellow);
}

.card--purple {
  background-color: var(--sPurple);
}

.card--green {
  background-color: var(--sGreen);
}

/* TUTTO SUBITO SECTION*/
.tsubito {
  display: flex;
}

.tsubito__first {
  align-self: center;
}

.tsubito__first > p {
  color: var(--sLightGrey);
  line-height: 24px;
}

.tsubito__box {
  height: 216px;
  border-radius: 5px;
  background-size: cover;
  background-position: center;
  display: flex;
  flex: 1 0 300px;
  align-items: flex-end;
}

.box--pay {
  background-image: url("./assets/pay.webp");
  margin-right: 1em;
}

.box--sell {
  background-image: url("./assets/sell.webp");
}

.btn--tsubito {
  background-color: var(--sRed);
  color: white;
  width: 90%;
  margin: 0 auto;
  margin-bottom: 1em;
}

.btn--tsubito:hover {
  border: 1px solid transparent;
}

/* SELL WIDGET SECTION*/
.sell-widget {
  display: flex;
  justify-content: space-around;
  align-items: center;
  border: 1px solid lightgray;
  min-height: 150px;
  border-radius: 5px;
  background: url("./assets/001_DESKTOP_inserisciannuncio.jpg") left center no-repeat;
  background-size: contain;
}

.sell-widget__text {
  color: var(--sGrey);
  flex-basis: 40%;
  margin-left: 235px;
}

.sell-widget__text > p {
  color: var(--sLightGrey);
}

/* MAGAZINE SECTION */
.magazine {
  display: flex;
  height: 300px;
}

.magazine__img {
  background: url("./assets/HP_BOX_earth_day_20220426.jpg") center center no-repeat;
  background-size: cover;
  border-radius: 5px;
  flex-basis: 60%;
}
/* ... */

